changed background color and modified header

--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,16 @@
 	background-color: red;
 	color: white;
 }
+
+header {
+	font-size: 50px;
+}
+
+body {
+	background-color: rgba(0, 0, 0, 0.85);
+	color: white;
+}
+
+a {
+	color: white;
+}
